--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,7 +11,6 @@
     --on-surface: #333333;
 }
 
-
 * {
     padding: 0;
     margin: 0;
@@ -22,27 +21,30 @@ a {
     color: var(--on-background);
 }
 
-.app-container {
+/* .app-container {
+     font-family: 'Inter', sans-serif;
     color: var(--on-background);
     background-color: var(--background);
     min-height: 100vh;
+    width: 100%;
+    height: 100%;
     transition: all ease-in-out 0.5s;
-}
+} */
 
-body {
+/* body {
     font-family: 'Inter', sans-serif;
     width: 100%;
     height: 100%;
     background-color: var(--background);
-}
+} */
 
-.loading {
+/* .loading {
     position: fixed;
     width: 100%;
     top: 64px;
-  }
+  } */
 
-.top-bar {
+/* .top-bar {
     display: flex;
     align-items: center;
     padding: 16px;
@@ -59,14 +61,14 @@ body {
     display: inline-block;
     font-size: 30px;
     margin: 0 8px;
-}
+} */
 
-main {
+/* main {
     margin: 0 auto;
     padding: 32px 0;
     width: 90%;
     max-width: 1200px;
-}
+} */
 
 
 .thread-page,
@@ -528,7 +530,7 @@ main {
     cursor: pointer;
 }
 
-.button-menu {
+/* .button-menu {
     display: flex;
     align-items: center;
     gap: 6px;
@@ -538,12 +540,12 @@ main {
     font-size: 20px;
     cursor: pointer;
     color: var(--on-background);
-}
+} */
 
-.button-menu img {
+/* .button-menu img {
     width: 20px;
     border-radius: 50%;
-}
+} */
 
 
 @media screen and (min-width: 650px) {
