--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,10 +15,17 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
 }
 
 a {
     color: var(--on-background);
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    background-color: var(--background);
 }
 
 /* .app-container {
@@ -29,13 +36,6 @@ a {
     width: 100%;
     height: 100%;
     transition: all ease-in-out 0.5s;
-} */
-
-/* body {
-    font-family: 'Inter', sans-serif;
-    width: 100%;
-    height: 100%;
-    background-color: var(--background);
 } */
 
 /* .loading {
@@ -71,14 +71,13 @@ a {
 } */
 
 
-.thread-page,
 .leaderboard-page,
 .add-thread-page,
 .detail-thread-page {
     margin: 32px 0;
 }
 
-.thread-page__action {
+/* .thread-page__action {
     position: fixed;
     display: flex;
     gap: 16px;
@@ -99,9 +98,9 @@ a {
     color: var(--background);
     padding: 8px;
     cursor: pointer;
-}
+} */
 
-.thread-list,
+/* .thread-list,
 .thread-list__empty {
     margin-top: 32px;
     padding: 16px 8px;
@@ -126,7 +125,7 @@ a {
     position: fixed;
     width: 400px;
     height: 400px;
-}
+} */
 
 .thread-list__error p {
     text-align: center;
