--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,7 +15,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
 
 a {
@@ -23,6 +22,7 @@ a {
 }
 
 body {
+    font-family: 'Inter', sans-serif;
     width: 100%;
     height: 100%;
     background-color: var(--background);
@@ -431,7 +431,7 @@ body {
     min-height: 200px;
 }
 
-.leaderboard-list {
+/* .leaderboard-list {
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -487,9 +487,9 @@ body {
 
 .leaderboard-item__score {
     font-size: 24px;
-}
+} */
 
-.input-login,
+/* .input-login,
 .input-register {
     margin: 32px 0;
 }
@@ -527,7 +527,7 @@ body {
     background-color: var(--on-background);
     color: var(--background);
     cursor: pointer;
-}
+} */
 
 /* .button-menu {
     display: flex;
@@ -545,26 +545,3 @@ body {
     width: 20px;
     border-radius: 50%;
 } */
-
-
-@media screen and (min-width: 650px) {
-    .notes-list {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .detail-page__title {
-        font-size: 64px;
-    }
-}
-
-@media screen and (min-width: 850px) {
-    .notes-list {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .notes-list {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
